# bevy-gta-clone

./: .gitignore  AGENT.md  BATCH_PROCESSING_IMPLEMENTATION_SUMMARY.md  BENCHMARKS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CURRENT_ARCHITECTURE_CAPABILITIES.md  Cargo.toml  F430BC6_ARCHITECTURE_ANALYSIS.md  GAP_REPORT.md  GPU_CULLING_IMPLEMENTATION_SUMMARY.md  GPU_CULLING_RENDER_GRAPH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_STRIKE_IMPLEMENTATION.md  PHASE_6_COMPLETION_REPORT.md  PHASE_ITEM_ENQUEUE_IMPLEMENTATION.md  README.md  RELEASE_NOTES_v0.3.0-alpha.md  SERVICE_ELIMINATION_SUMMARY.md  SPRINT_2_COMPLETION_REPORT.md  SPRINT_4_COMPLETION_REPORT.md  SPRINT_7_AAAPLUGIN_IMPLEMENTATION_SUMMARY.md  SPRINT_9_D4-7_OPTIMIZATION_SUMMARY.md  SPRINT_9_OPTIMIZATION_SUMMARY.md  STRATEGIC_SHIFT.md  TRANSIENT_BUFFER_POOL_IMPLEMENTATION.md  collision_test.rs  deny.toml  lcov.info  oracle_verification_test.rs
crates/amp_core/: Cargo.toml
crates/amp_core/src/: allocation_tracking.rs  lib.rs  system_ordering.rs  system_ordering_tests.rs
crates/amp_core/src/input/: abstractions.rs  actions.rs  context.rs  events.rs  mod.rs
crates/amp_engine/: Cargo.toml
crates/amp_engine/src/: batch.rs  batch_complex.rs  hud.rs  lib.rs  memory.rs  performance_benchmarks.rs  performance_integration.rs  performance_simple.rs  performance_strike.rs  plugins.rs  prelude.rs  test_utils.rs  tracing.rs  world_streaming.rs
crates/amp_engine/src/assets/: app_level_tests.rs  hot_reload_test.rs  loader.rs  mod.rs  plugin.rs  scene.rs  tests.rs
crates/amp_engine/src/batch/: macros.rs  tests.rs
crates/amp_engine/src/batch_complex/: macros.rs
crates/amp_engine/src/gpu/: context.rs  mod.rs  surface.rs
crates/amp_engine/src/memory/: integration.rs  render_integration.rs
crates/amp_engine/src/spatial/: clipmap.rs  mod.rs  provider.rs
crates/amp_engine/src/spawn_budget/: adaptive.rs  gpu_integration.rs  integration.rs  mod.rs  performance_feedback.rs  plugin.rs  simple_tests.rs  tests.rs
crates/amp_engine/src/world/: mod.rs
crates/amp_engine/src/world_streaming/: async_generation.rs  factory_integration.rs  hierarchical_streaming.rs  hierarchical_streaming_test.rs
crates/amp_foundation/: Cargo.toml  README.md
crates/amp_foundation/src/: lib.rs
crates/amp_game/: Cargo.toml  README.md
crates/amp_game/src/: lib.rs
crates/amp_gameplay/: Cargo.toml  README.md
crates/amp_gameplay/assets/animations/: mixamo_default.animset.ron
crates/amp_gameplay/benches/: gameplay_performance.rs
crates/amp_gameplay/docs/: MIXAMO_INTEGRATION.md
crates/amp_gameplay/examples/: mixamo_character.rs
crates/amp_gameplay/src/: lib.rs  spawn_budget_integration.rs  spawn_budget_policy.rs  spawn_budget_policy_tests.rs
crates/amp_gameplay/src/audio/: components.rs  config.rs  mod.rs  resources.rs  simple_audio.rs  systems.rs  systems_simple.rs  tests.rs
crates/amp_gameplay/src/biome/: generation.rs  mod.rs  recipes.rs
crates/amp_gameplay/src/character/: assets.rs  bundles.rs  components.rs  mod.rs  visual.rs
crates/amp_gpu/: Cargo.toml
crates/amp_gpu/src/: lib.rs  surface.rs
crates/amp_math/: Cargo.toml
crates/amp_math/src/: chunk_key.rs  coordinate_conversion.rs  lib.rs  spatial.rs  spline.rs
crates/amp_physics/: Cargo.toml  README.md
crates/amp_physics/benches/: physics_performance_bench.rs  suspension_bench.rs
crates/amp_physics/examples/: vehicle_physics_demo.rs
crates/amp_physics/src/: benchmarks.rs  bundles.rs  components.rs  debug.rs  drivetrain.rs  interpolation.rs  lib.rs  rapier.rs  suspension.rs  systems.rs  time.rs
crates/amp_physics/tests/: integration_drivetrain.rs  performance_regression.rs
crates/amp_render/: Cargo.toml  README.md
crates/amp_render/benches/: gpu_vs_cpu_culling.rs  optimized_culling_benchmark.rs
crates/amp_render/docs/: OPTIMIZED_CULLING.md
crates/amp_render/src/: batching.rs  culling.rs  culling_integration.rs  diagnostics.rs  distance_cache.rs  distance_cache_benchmark.rs  distance_cache_integration_test.rs  gpu_culling.rs  gpu_culling_integration.rs  gpu_culling_simple.rs  lib.rs  lod.rs  optimized_culling.rs  optimized_queries.rs  performance_tuning.rs  render_world.rs  render_world_backup.rs
crates/amp_spatial/: Cargo.toml
crates/amp_spatial/src/: lib.rs
crates/amp_system/: Cargo.toml  README.md
crates/amp_system/src/: lib.rs
crates/amp_world/: Cargo.toml
crates/amp_world/src/: lib.rs
crates/config_core/: Cargo.toml  README.md
crates/config_core/examples/: bevy_config_demo.rs.disabled
crates/config_core/src/: audio.rs  input.rs  integration_tests.rs  lib.rs  types.rs  validation.rs  vegetation.rs  vehicle.rs
crates/config_core/tests/: bevy_integration_tests.rs.disabled  export_test.rs  hot_reload_latency_test.rs  vehicle_config_integration.rs
crates/gameplay_factory/: Cargo.toml
crates/gameplay_factory/assets/: test_car.prefab.ron
crates/gameplay_factory/benches/: factory_spawn.rs
crates/gameplay_factory/examples/: dsl_example.rs  dsl_example.rs.disabled
crates/gameplay_factory/src/: assets.rs  blueprint.rs  component_registry.rs  dsl.rs  dsl_complex.rs.bak  factory_dsl_integration.rs  factory_dsl_integration.rs.bak  hot_reload.rs  lib.rs  npc_factory.rs  optimized_factory.rs  prefab.rs  prefab_factory.rs  ron_loader.rs  simple_optimized.rs  vehicle_factory.rs
crates/gameplay_factory/tests/: asset_pipeline_integration.rs  basic_tests.rs  dsl_integration_test.rs  dsl_integration_test.rs.disabled  hot_reload_integration.rs  integration_test.rs  oracle_workflow_integration.rs  prefab_factory_test.rs  vehicle_factory_basic_test.rs
examples/: Cargo.toml  aaa_plugin_example.rs  asset_pipeline_test.rs  batch_processing_test.rs  bevy_asset_integration.rs  bevy_asset_pipeline.rs  buffer_pool_demo.rs  city_demo_baseline.rs  enhanced_city_demo.rs  facade_migration_demo.rs  gpu_culling_demo.rs  gpu_culling_feature_demo.rs  lod_system_demo.rs  minimal.rs  quickstart.rs  simple_lod_demo.rs  sprint_3_demo.rs  vegetation_lod_demo.rs  vehicle_physics_integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+230 files in other folders)
