[workspace]
members = [
    "crates/*",
    "tools/xtask",
]
exclude = [
    "examples",  # Will re-enable during migration per Oracle's plan
    "crates/amp_spatial",  # Deprecated: moved to amp_engine::spatial
    "crates/amp_gpu",      # Deprecated: moved to amp_engine::gpu
    "crates/amp_world",    # Deprecated: moved to amp_engine::world
]
resolver = "2"

# STRATEGIC SHIFT: Updated to Rust 2024 edition (released with 1.85.0)
# Current: bevy_ecs 0.13 + micro-crates  
# Target: Bevy 0.16.1 + strategic modularity
[workspace.package]
edition = "2024" 
rust-version = "1.85"
version = "0.3.0-alpha"
authors = ["Brady Jeong <bradyjeong@Mac.attlocal.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradyjeong/bevy-gta-clone"

[workspace.dependencies]
# ORACLE'S VERSION-CONSISTENCY STRATEGY: Single source of truth for all versions
# ---------- Bevy core ----------
bevy = "=0.16.1"                          # Full engine, patch-locked
bevy_ecs = "=0.16.1"                      # ECS crate (for deprecated amp_world)
bevy_rapier3d = "=0.30.0"                 # Compiled against Bevy 0.16.1, physics simulation
# ---------- Rendering ----------
# Bevy re-exports wgpu/winit; keep them in sync for crates that still need them
wgpu = "=24.0.5"   # Locked to Bevy 0.16.1 version
winit = "=0.30.11"  # Locked to Bevy 0.16.1 version
# ---------- Math / util ----------
glam = { version = "=0.29.3", features = ["fast-math"] }
serde = { version = "^1", features = ["derive"] }
anyhow = { version = "^1.0", default-features = false }
thiserror = { version = "^2.0" }
bitset-fixed = "^0.1"
pollster = "^0.3"

# Configuration
ron = "^0.8"
dirs = "^5.0"
serde_json = "^1.0"

# Dev tools
rstest = "^0.21"
criterion = "^0.5"
tempfile = "^3.10"
tokio-test = "^0.4.3"
crossbeam-utils = "^0.8"
serial_test = "^3.0"

# Common runtime deps used by multiple crates
tokio = { version = "^1.37", features = ["rt", "sync", "time"] }
notify = "^6.1"
once_cell = "^1.19"
dashmap = "^6.0"
glob = "^0.3"
log = "^0.4"
shellexpand = "^3.1"
async-trait = "^0.1"
env_logger = "^0.11"
clap = "^4.0"

# LEGACY DEPENDENCIES REMOVED: Oracle's migration cleanup complete

# ORACLE'S VERSION CONSISTENCY GUARD: Ensure all crates use exact versions
# Note: [patch.crates-io] only works for different sources, not version forcing
# Instead, we rely on careful dependency management and workspace.dependencies

[package]
name = "gta_game"
edition = "2024"
version = "0.1.0"
authors = ["Brady Jeong <bradyjeong@Mac.attlocal.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradyjeong/bevy-gta-clone"

# Disable automatic example discovery
autoexamples = false

# Examples for asset pipeline integration
[[example]]
name = "asset_pipeline_test"
path = "examples/asset_pipeline_test.rs"

[[example]]
name = "city_demo_baseline"
path = "examples/city_demo_baseline.rs"
required-features = ["rapier3d_030"]

[features]
default = []
ron = ["gameplay_factory/ron"]
rapier3d_030 = ["gameplay_factory/rapier3d_030", "amp_physics", "bevy_rapier3d"]

[dependencies]
gameplay_factory = { path = "crates/gameplay_factory" }
config_core = { path = "crates/config_core" }
amp_engine = { path = "crates/amp_engine", features = ["bevy16"] }
amp_physics = { path = "crates/amp_physics", optional = true }
bevy.workspace = true
bevy_rapier3d = { workspace = true, optional = true }
env_logger = { workspace = true }

[[bin]]
name = "prefab-ls"
path = "src/bin/prefab-ls.rs"

[[bin]]
name = "collision_test"
path = "collision_test.rs"
