[workspace]
members = [
    "crates/*",
    "tools/xtask",
]
exclude = [
    "examples",  # Will re-enable during migration per Oracle's plan
    "crates/amp_spatial",  # Deprecated: moved to amp_engine::spatial
    "crates/amp_gpu",      # Deprecated: moved to amp_engine::gpu
    "crates/amp_world",    # Deprecated: moved to amp_engine::world
]
resolver = "2"

# STRATEGIC SHIFT: Updated to Rust 2024 edition (released with 1.85.0)
# Current: bevy_ecs 0.13 + micro-crates  
# Target: Bevy 0.16.1 + strategic modularity
[workspace.package]
edition = "2021" 
rust-version = "1.73"
version = "0.4.0-alpha.0"
authors = ["Brady Jeong <bradyjeong@Mac.attlocal.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradyjeong/bevy-gta-clone"

[workspace.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "doctest"]

[workspace.dependencies]
# ORACLE'S VERSION-CONSISTENCY STRATEGY: Single source of truth for all versions
# ---------- Bevy core ----------
bevy = "=0.16.1"                          # Full engine, patch-locked

bevy_rapier3d = { version = "=0.30.0", default-features = false, features = ["dim3", "enhanced-determinism", "debug-render"] }
# ---------- Audio ----------
bevy_kira_audio = "=0.23.0"               # Audio integration for Bevy
kira = "=0.9.6"                           # Audio engine
# ---------- Rendering ----------
# Bevy re-exports wgpu/winit; keep them in sync for crates that still need them
wgpu = "=24.0.5"   # Locked to Bevy 0.16.1 version
winit = "=0.30.11"  # Locked to Bevy 0.16.1 version
# ---------- Math / util ----------
glam = { version = "=0.29.3", features = ["fast-math"] }
serde = { version = "^1", features = ["derive"] }
anyhow = { version = "^1.0", default-features = false }
thiserror = { version = "^2.0" }
bitset-fixed = "^0.1"
pollster = "^0.3"
bytemuck = { version = "^1.14", features = ["derive"] }
smallvec = "^1.13"
jemallocator = "^0.5"                       # Memory allocator optimization

# Configuration
ron = "^0.8"
dirs = "^5.0"
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }

# Dev tools
rstest = "^0.21"
criterion = "^0.5"
tempfile = "^3.10"
tokio-test = "^0.4.3"
crossbeam-utils = "^0.8"
serial_test = "^3.0"

# Tracy profiling
tracy-client = "^0.17"
tracing-tracy = "^0.11"
tracing-subscriber = "^0.3"

# Common runtime deps used by multiple crates
tokio = { version = "^1.37", features = ["rt", "sync", "time"] }
notify = "^6.1"
once_cell = "^1.19"
dashmap = "^6.0"
glob = "^0.3"
log = "^0.4"
shellexpand = "^3.1"
async-trait = "^0.1"
env_logger = "^0.11"
clap = "^4.0"
rayon = "^1.8"

# LEGACY DEPENDENCIES REMOVED: Oracle's migration cleanup complete

# ORACLE'S VERSION CONSISTENCY GUARD: Ensure all crates use exact versions
# Note: [patch.crates-io] only works for different sources, not version forcing
# Instead, we rely on careful dependency management and workspace.dependencies

[package]
name = "gta_game"
edition = "2021"
version = "0.1.0"
authors = ["Brady Jeong <bradyjeong@Mac.attlocal.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradyjeong/bevy-gta-clone"

# Disable automatic example discovery
autoexamples = false

# Examples for asset pipeline integration
[[example]]
name = "asset_pipeline_test"
path = "examples/asset_pipeline_test.rs"

[[example]]
name = "city_demo_baseline"
path = "examples/city_demo_baseline.rs"
required-features = ["rapier3d_030"]

[[example]]
name = "batch_processing_test"
path = "examples/batch_processing_test.rs"

[features]
default = []
ron = ["gameplay_factory/ron"]
rapier3d_030 = ["gameplay_factory/rapier3d_030", "amp_physics", "bevy_rapier3d"]
gpu_culling = ["amp_render/gpu_culling"]
tracy = ["tracy-client", "tracing-tracy", "amp_render/tracy", "amp_gameplay/tracy", "gameplay_factory/tracy"]

[dependencies]
gameplay_factory = { path = "crates/gameplay_factory" }
config_core = { path = "crates/config_core" }
amp_engine = { path = "crates/amp_engine", features = ["bevy16", "physics", "audio"] }
amp_physics = { path = "crates/amp_physics", optional = true }
amp_gameplay = { path = "crates/amp_gameplay" }
amp_render = { path = "crates/amp_render" }
bevy.workspace = true
bevy_rapier3d = { workspace = true, optional = true }
env_logger = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

[[bin]]
name = "prefab-ls"
path = "src/bin/prefab-ls.rs"

[[bin]]
name = "collision_test"
path = "collision_test.rs"

[[example]]
name = "vehicle_physics_integration"
path = "examples/vehicle_physics_integration.rs"

[[example]]
name = "sprint_3_demo"
path = "examples/sprint_3_demo.rs"
required-features = ["rapier3d_030"]

[[example]]
name = "gpu_culling_demo"
path = "examples/gpu_culling_demo.rs"

[[example]]
name = "lod_system_demo"
path = "examples/lod_system_demo.rs"

[[example]]
name = "simple_lod_demo"
path = "examples/simple_lod_demo.rs"

[[example]]
name = "gpu_culling_feature_demo"
path = "examples/gpu_culling_feature_demo.rs"
