[workspace]
members = [
    "crates/*",
    "xtask",
]
resolver = "2"

# STRATEGIC SHIFT: Using Rust 2021 edition with Bevy 0.16.1
# Current: Bevy 0.16.1 + strategic modularity achieved
# Status: Sprint 9 completed, v0.4.0-alpha.0 release ready
[workspace.package]
edition = "2021" 
rust-version = "1.73"
version = "0.4.0-alpha.0"
authors = ["Brady Jeong <bradyjeong@Mac.attlocal.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradyjeong/bevy-gta-clone"

[workspace.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "doctest"]

[workspace.dependencies]
# ORACLE'S VERSION-CONSISTENCY STRATEGY: Single source of truth for all versions
# ---------- Bevy core ----------
bevy = "=0.16.1"                          # Full engine, patch-locked

bevy_rapier3d = { version = "=0.30.0", default-features = false, features = ["dim3", "enhanced-determinism", "debug-render"] }
# ---------- Audio ----------
bevy_kira_audio = "=0.23.0"               # Audio integration for Bevy
kira = "=0.9.6"                           # Audio engine
# ---------- Rendering ----------
# Bevy re-exports wgpu/winit; keep them in sync for crates that still need them
wgpu = "=24.0.5"   # Locked to Bevy 0.16.1 version
winit = "=0.30.11"  # Locked to Bevy 0.16.1 version
bevy_egui = "0.35.1"  # UI framework for debug/performance overlay
# ---------- Math / util ----------
glam = { version = "=0.29.3", features = ["fast-math"] }
serde = { version = "^1", features = ["derive"] }
anyhow = { version = "^1.0", default-features = false }
thiserror = { version = "^2.0" }
bitset-fixed = "^0.1"
pollster = "^0.3"
bytemuck = { version = "^1.14", features = ["derive"] }
smallvec = "^1.13"
fastrand = "^2.2"
futures-lite = "^2.3"
jemallocator = "^0.5"                       # Memory allocator optimization

# Configuration
ron = "^0.8"
dirs = "^5.0"
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }

# Random number generation
rand = "^0.8"

# Dev tools
rstest = "^0.21"
criterion = "^0.5"
tempfile = "^3.10"
tokio-test = "^0.4.3"
crossbeam-utils = "^0.8"
serial_test = "^3.0"

# Tracy profiling
tracy-client = "^0.17"
tracing-tracy = "^0.11"
tracing-subscriber = "^0.3"

# Performance tracing
tracing = "^0.1"
tracing-chrome = "^0.7"

# Common runtime deps used by multiple crates
tokio = { version = "^1.37", features = ["rt", "sync", "time"] }
notify = "^6.1"
once_cell = "^1.19"
dashmap = "^6.0"
glob = "^0.3"
log = { version = "^0.4", features = ["release_max_level_debug"] }
shellexpand = "^3.1"
async-trait = "^0.1"
env_logger = "^0.11"
clap = "^4.0"
rayon = "^1.8"
slotmap = "^1.0"

# LEGACY DEPENDENCIES REMOVED: Oracle's migration cleanup complete

# ORACLE'S VERSION CONSISTENCY GUARD: Ensure all crates use exact versions
# Note: [patch.crates-io] only works for different sources, not version forcing
# Instead, we rely on careful dependency management and workspace.dependencies

[package]
name = "gta_game"
edition = "2021"
version = "0.1.0"
authors = ["Brady Jeong <bradyjeong@Mac.attlocal.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bradyjeong/bevy-gta-clone"
default-run = "gta_game"

# No examples - main binary only

[features]
default = ["bevy16", "gpu_culling", "gpu", "rapier3d_030", "perf_monitoring", "unstable_road_system"]
ron = ["gameplay_factory/ron"]
rapier3d_030 = ["gameplay_factory/rapier3d_030", "amp_physics", "bevy_rapier3d"]
gpu_culling = []
world_streaming = []
bevy16 = []
gpu = []
audio = ["bevy_kira_audio"]
debug = []
perf_monitoring = []
perf_debug_logging = []
tracy = ["tracy-client", "tracing-tracy", "amp_gameplay/tracy", "gameplay_factory/tracy"]
profile = ["tracy", "amp_render/profile"]
perf_trace = ["tracing", "tracing-chrome", "amp_gameplay/perf_trace", "gameplay_factory/perf_trace"]
unstable_hierarchical_world = ["amp_engine/unstable_hierarchical_world", "amp_gameplay/unstable_hierarchical_world"]
unstable_advanced_input = ["amp_core/unstable_advanced_input", "amp_gameplay/unstable_advanced_input", "amp_engine/unstable_advanced_input", "config_core/unstable_advanced_input"]
unstable_road_system = ["amp_math/unstable_road_system", "amp_render/unstable_road_system", "amp_gameplay/unstable_road_system"]
unstable_vegetation_lod = ["amp_render/unstable_vegetation_lod"]
unstable_spawn_budget = ["amp_engine/unstable_spawn_budget"]

[dependencies]
gameplay_factory = { path = "crates/gameplay_factory" }
config_core = { path = "crates/config_core" }
amp_core = { path = "crates/amp_core" }
amp_math = { path = "crates/amp_math" }
amp_engine = { path = "crates/amp_engine", features = ["bevy16"] }
amp_physics = { path = "crates/amp_physics", optional = true }
amp_gameplay = { path = "crates/amp_gameplay", features = ["unstable_road_system"] }
amp_render = { path = "crates/amp_render", features = ["unstable_road_system"] }
amp_foundation = { path = "crates/amp_foundation" }
bevy.workspace = true
bevy_rapier3d = { workspace = true, optional = true }
bevy_kira_audio = { workspace = true, optional = true }
bevy_egui = { workspace = true }
rand = { workspace = true }
env_logger = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
serde_json = { workspace = true }

[[bin]]
name = "prefab-ls"
path = "src/bin/prefab-ls.rs"

[[bin]]
name = "gta_game"
path = "src/main.rs"



# Examples disabled - using comprehensive test suite instead
