# STRATEGIC SHIFT: Will be updated during migration to:
# - Replace bevy_ecs 0.13 with bevy 0.16.1  
# - Update dependencies to match Oracle's structure
# - Replace bins with [[example]] entries for city_demo
# See STRATEGIC_SHIFT.md for migration plan

[package]
name = "amp_examples"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["ron"]
ron = ["gameplay_factory/ron"]

[[bin]]
name = "minimal"
path = "minimal.rs"

[[bin]]
name = "gameplay_factory_example"
path = "gameplay_factory_example.rs"

[[bin]]
name = "bevy_asset_pipeline"
path = "bevy_asset_pipeline.rs"

[[bin]]
name = "city_demo_baseline"
path = "city_demo_baseline.rs"

[dependencies]
amp_core = { path = "../crates/amp_core" }
amp_engine = { path = "../crates/amp_engine", features = ["bevy16"] }
config_core = { path = "../crates/config_core" }
gameplay_factory = { path = "../crates/gameplay_factory", features = ["ron"] }
bevy_ecs = "0.13"
bevy.workspace = true
winit.workspace = true
pollster = "0.3"
env_logger = "0.10"
