# STRATEGIC SHIFT: Will be updated during migration to:
# - Replace bevy_ecs 0.13 with bevy 0.16.1  
# - Update dependencies to match Oracle's structure
# - Replace bins with [[example]] entries for city_demo
# See STRATEGIC_SHIFT.md for migration plan

[package]
name = "amp_examples"
version = "0.4.0-alpha.0"
edition = "2024"
rust-version = "1.85"
publish = false

[features]
default = ["ron", "gpu_culling"]
ron = ["gameplay_factory/ron"]
rapier3d_030 = ["amp_physics/rapier3d_030"]
tracy = ["tracy-client", "tracing-tracy", "tracing-subscriber"]
gpu_culling = ["amp_render/gpu_culling"]

[[bin]]
name = "minimal"
path = "minimal.rs"

[[bin]]
name = "gameplay_factory_example"
path = "gameplay_factory_example.rs"

[[bin]]
name = "bevy_asset_pipeline"
path = "bevy_asset_pipeline.rs"

[[bin]]
name = "city_demo_baseline"
path = "city_demo_baseline.rs"

[[bin]]
name = "buffer_pool_demo"
path = "buffer_pool_demo.rs"

[[bin]]
name = "aaa_plugin_example"
path = "aaa_plugin_example.rs"

[[bin]]
name = "enhanced_city_demo"
path = "enhanced_city_demo.rs"

[dependencies]
amp_core = { path = "../crates/amp_core" }
amp_engine = { path = "../crates/amp_engine", features = ["bevy16"] }
amp_physics = { path = "../crates/amp_physics", features = ["rapier3d_030"] }
amp_render = { path = "../crates/amp_render" }
amp_gameplay = { path = "../crates/amp_gameplay" }
config_core = { path = "../crates/config_core" }
gameplay_factory = { path = "../crates/gameplay_factory", features = ["ron"] }
bevy_ecs = "=0.16.1"
bevy = { version = "=0.16.1", features = ["bevy_winit", "bevy_render", "bevy_pbr", "bevy_ui", "bevy_text"] }
bevy_rapier3d = { version = "=0.30.0", features = ["dim3", "enhanced-determinism", "debug-render"] }
winit = "=0.30.11"
pollster = "0.3"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }

# Tracy profiling dependencies
tracy-client = { version = "0.17", optional = true }
tracing-tracy = { version = "0.11", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
