[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
ron.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
