[package]
name = "amp_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core error handling and utilities for the AMP Game Engine"
categories = ["development-tools", "game-engines"]
keywords = ["error", "core", "utilities", "game-engine"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bevy = { workspace = true }
tracy-client = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = []
tracy = ["dep:tracy-client"]
