[package]
name = "amp_engine"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bevy16 = ["bevy", "wgpu", "winit", "pollster", "thiserror", "anyhow", "ron", "serde"]

[dependencies]
bevy = { workspace = true, optional = true }
# bevy_ecs removed: use bevy::prelude::* instead
amp_core = { path = "../amp_core" }
amp_math = { path = "../amp_math" }
async-trait = { workspace = true }
glam = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# GPU dependencies (behind bevy16 feature flag)
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# Asset pipeline dependencies (behind bevy16 feature flag)
ron = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
