[package]
name = "amp_engine"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bevy16 = ["bevy", "wgpu", "winit", "pollster", "thiserror", "anyhow", "ron", "serde", "amp_gameplay", "bevy_rapier3d", "bevy_kira_audio", "jemallocator"]
config = []
physics = []
audio = []
render = []
perf_trace = ["tracing", "tracing-chrome", "tracing-subscriber"]
entity_debug = ["tracing"]

[dependencies]
bevy = { workspace = true, optional = true }
# bevy_ecs removed: use bevy::prelude::* instead
amp_core = { path = "../amp_core" }
amp_math = { path = "../amp_math" }
amp_gameplay = { path = "../amp_gameplay", optional = true }
config_core = { path = "../config_core", features = ["bevy-assets"] }
bevy_rapier3d = { workspace = true, optional = true }
bevy_kira_audio = { workspace = true, optional = true }
async-trait = { workspace = true }
glam = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# GPU dependencies (behind bevy16 feature flag)
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# Asset pipeline dependencies (behind bevy16 feature flag)
ron = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

# Memory optimization (Oracle's Day 4-5)
jemallocator = { workspace = true, optional = true }

# Performance tracing
tracing = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Performance optimization dependencies
slotmap = { workspace = true }
rayon = { workspace = true }
criterion = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
