[package]
name = "amp_engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine systems for the AMP Game Engine"
categories = ["game-development", "game-engines"]
keywords = ["bevy", "engine", "spatial", "gpu", "world"]

[lib]
path = "src/lib.rs"

[dependencies]
amp_core = { path = "../amp_core", version = "0.4.0-alpha.0" }
amp_math = { path = "../amp_math", version = "0.4.0-alpha.0" }
amp_gameplay = { path = "../amp_gameplay", version = "0.4.0-alpha.0" }
config_core = { path = "../config_core", version = "0.4.0-alpha.0", features = ["bevy-assets"] }
bevy = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracy-client = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
wgpu = { workspace = true }
winit = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
criterion = { workspace = true, optional = true }
slotmap = { workspace = true }
futures-lite = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
fastrand = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = ["bevy16"]
bevy16 = []
tracy = ["dep:tracy-client"]
entity_debug = []
config = []
physics = []
audio = []
render = []
perf_trace = ["tracing"]
unstable_gpu_culling = []
unstable_hierarchical_world = []
unstable_advanced_input = []
unstable_spawn_budget = []
benchmarks = ["dep:criterion"]
