[package]
name = "amp_gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU abstraction layer built on wgpu for the AMP Game Engine"
categories = ["rendering", "graphics", "game-engines"]
keywords = ["gpu", "wgpu", "graphics", "rendering", "game-engine"]
publish = false

[dependencies]
amp_engine = { path = "../amp_engine", features = ["bevy16"] }

[features]
default = []

[dev-dependencies]
rstest.workspace = true
