[package]
name = "amp_math"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance math library for spatial calculations and Morton encoding"
categories = ["mathematics", "game-engines", "algorithms"]
keywords = ["math", "morton", "spatial", "3d", "game-engine"]

[dependencies]
glam = { workspace = true, features = ["mint", "serde"] }
bitset-fixed = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
