[package]
name = "amp_render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance batch rendering and GPU culling for Amp"

[features]
default = ["instancing", "diagnostics"]
instancing = []
gpu = ["wgpu"]
gpu_culling = ["wgpu"]
unstable_vegetation_lod = []
unstable_road_system = ["amp_math/unstable_road_system"]
tracy = ["tracy-client"]
perf_trace = ["tracing", "tracing-chrome"]
profile = ["tracy-client", "tracing", "tracing-chrome"]
diagnostics = []

[dependencies]
# Core Bevy (use workspace version with all features)
bevy = { workspace = true }

# GPU compute shaders (optional feature)
wgpu = { workspace = true, optional = true }

# Math and utilities
glam = { workspace = true }
bitset-fixed = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
smallvec = { workspace = true }
futures-lite = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
fastrand = { workspace = true }

# Internal crates
amp_core = { path = "../amp_core" }
amp_math = { path = "../amp_math" }
# amp_engine dependency removed - using amp_core for system ordering

# Tracy profiling (optional)
tracy-client = { workspace = true, optional = true }

# Performance tracing
tracing = { workspace = true, optional = true }
tracing-chrome = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
pollster = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
fastrand = { workspace = true }

[[bench]]
name = "gpu_vs_cpu_culling"
harness = false
required-features = ["gpu_culling"]

[[bench]]
name = "optimized_culling_benchmark"
harness = false
