[package]
name = "amp_spatial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hierarchical spatial partitioning and streaming for the AMP Game Engine"
categories = ["algorithms", "data-structures", "game-engines"]
keywords = ["spatial", "partitioning", "streaming", "clipmap", "game-engine"]
publish = false

[dependencies]
amp_engine = { path = "../amp_engine" }

[dev-dependencies]
tokio-test = { workspace = true }
