[package]
name = "config_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration loading and management for the AMP Game Engine"
categories = ["config", "development-tools", "game-engines"]
keywords = ["config", "ron", "game-engine", "configuration"]

[features]
default = []
hot-reload = []
bevy-assets = ["dep:bevy"]

[dependencies]
amp_core = { path = "../amp_core" }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
shellexpand = { workspace = true }

# Bevy dependencies for asset system integration
bevy = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
